--- a/notebooks/01.ipynb
+++ b/notebooks/01.ipynb
@@ -2,31 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import statistics\n",
-    "import sys\n",
-    "\n",
-    "sys.path.append(\"..\")\n",
     "import random\n",
+    "import statistics\n",
     "\n",
     "import statspy as sp"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creating an array"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[25, 25, 47, 83, 58, 15, 94, 91, 94, 51, 59, 17]"
+       "[25, 25, 52, 42, 0, 51, 88, 67, 94, 46, 44, 33]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,16 +42,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Location params"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats mean: 54.916666666666664\n",
-      "sirius mean: 54.916666666666664\n"
+      "stats mean: 47.25\n",
+      "statspy mean: 47.25\n"
      ]
     }
    ],
@@ -58,15 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats median: 54.5\n",
-      "sirius median: 54.5\n"
+      "stats median: 45.0\n",
+      "statspy median: 45.0\n"
      ]
     }
    ],
@@ -77,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +96,7 @@
      "output_type": "stream",
      "text": [
       "stats mode: 25\n",
-      "sirius mode: [25, 94]\n"
+      "statspy mode: [25]\n"
      ]
     }
    ],
@@ -95,39 +106,106 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dispersion params"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats stdev: 30.257856480389993\n"
-     ]
-    },
-    {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstats stdev: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstatistics\u001b[38;5;241m.\u001b[39mstdev(array)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msirius stdev: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43msirius\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstandard_deviation\u001b[49m\u001b[43m(\u001b[49m\u001b[43marray\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Documents/projects/sirius/notebooks/../sirius/descriptive/dispersion.py:6\u001b[0m, in \u001b[0;36mstandard_deviation\u001b[0;34m(array)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mstandard_deviation\u001b[39m(array: \u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mint\u001b[39m \u001b[38;5;241m|\u001b[39m \u001b[38;5;28mfloat\u001b[39m]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mfloat\u001b[39m:\n\u001b[0;32m----> 6\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m\n",
-      "\u001b[0;31mNotImplementedError\u001b[0m: "
+      "stats sample stdev: 26.52314598095921\n",
+      "statspy sample stdev: 26.52314598095921\n"
      ]
     }
    ],
    "source": [
-    "print(f\"stats stdev: {statistics.stdev(array)}\")\n",
-    "print(f\"statspy stdev: {sp.stdev(array)}\")"
+    "print(f\"stats sample stdev: {statistics.stdev(array)}\")\n",
+    "print(f\"statspy sample stdev: {sp.stdev(array)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stats population stdev: 25.39397894514892\n",
+      "statspy population stdev: 25.39397894514892\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"stats population stdev: {statistics.pstdev(array)}\")\n",
+    "print(f\"statspy population stdev: {sp.pstdev(array)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stats sample variance: 703.4772727272727\n",
+      "statspy sample variance: 703.4772727272727\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"stats sample variance: {statistics.variance(array)}\")\n",
+    "print(f\"statspy sample variance: {sp.variance(array)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stats population variance: 644.8541666666666\n",
+      "statspy population variance: 644.8541666666666\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"stats population variance: {statistics.pvariance(array)}\")\n",
+    "print(f\"statspy population variance: {sp.pvariance(array)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "statspy-kLKw4TpD-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -141,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
