chore: update files

--- a/notebooks/01.ipynb
+++ b/notebooks/01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[25, 25, 52, 42, 0, 51, 88, 67, 94, 46, 44, 33]"
+       "[25, 25, 4, 91, 63, 18, 68, 100, 5, 64, 83, 76]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,15 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats mean: 47.25\n",
-      "statspy mean: 47.25\n"
+      "stats mean: 51.833333333333336\n",
+      "statspy mean: 51.833333333333336\n"
      ]
     }
    ],
@@ -69,15 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats median: 45.0\n",
-      "statspy median: 45.0\n"
+      "stats median: 63.5\n",
+      "statspy median: 63.5\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,15 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats sample stdev: 26.52314598095921\n",
-      "statspy sample stdev: 26.52314598095921\n"
+      "stats sample stdev: 34.39036158136418\n",
+      "statspy sample stdev: 34.39036158136418\n"
      ]
     }
    ],
@@ -133,15 +133,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats population stdev: 25.39397894514892\n",
-      "statspy population stdev: 25.39397894514892\n"
+      "stats population stdev: 32.926264423540196\n",
+      "statspy population stdev: 32.926264423540196\n"
      ]
     }
    ],
@@ -152,15 +152,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats sample variance: 703.4772727272727\n",
-      "statspy sample variance: 703.4772727272727\n"
+      "stats sample variance: 1182.6969696969697\n",
+      "statspy sample variance: 1182.6969696969697\n"
      ]
     }
    ],
@@ -171,15 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "stats population variance: 644.8541666666666\n",
-      "statspy population variance: 644.8541666666666\n"
+      "stats population variance: 1084.138888888889\n",
+      "statspy population variance: 1084.138888888889\n"
      ]
     }
    ],
